# KRCore

./: .gitignore  Cargo.toml  README.md
KRdmaKit-syscall/: Cargo.toml  Kbuild  build.rs
KRdmaKit-syscall/src/: client.rs  core.rs  lib.rs  virtual_queue.rs
KRdmaKit-syscall/src/nostd_async/: mod.rs
KRdmaKit-syscall/src/rpc/: client.rs  mod.rs  protocol.rs
benchs/rc_read/src/: lib.rs
benchs/ud/src/: lib.rs
exp/: CMakeLists.txt  README.md  reg_mr.cc
exp/exp_scripts/: log_analyser.py
exp/exp_scripts/run-factor-analysis/: run-onesided-syscall.toml  run-onesided-user.toml
exp/exp_scripts/run-full-mesh/kernel/: run10-base.toml  run10-base.toml.txt  run10.toml  run10.toml.txt  run2-base.toml  run2-base.toml.txt  run2.toml  run2.toml.txt  run3-base.toml  run3-base.toml.txt  run3.toml  run3.toml.txt  run4-base.toml  run4-base.toml.txt  run4.toml  run4.toml.txt  run5-base.toml  run5-base.toml.txt  run5.toml  run5.toml.txt  run6-base.toml  run6-base.toml.txt  run6.toml  run6.toml.txt  run7-base.toml  run7-base.toml.txt  run7.toml  run7.toml.txt  run8-base.toml  run8-base.toml.txt  run8.toml  run8.toml.txt  run9-base.toml  run9-base.toml.txt  run9.toml  run9.toml.txt
exp/exp_scripts/run-full-mesh/krcore/: run10-base.toml  run10-base.toml.txt  run10.toml  run10.toml.txt  run2-base.toml  run2-base.toml.txt  run2.toml  run2.toml.txt  run3-base.toml  run3-base.toml.txt  run3.toml  run3.toml.txt  run4-base.toml  (+23 more)
exp/exp_scripts/run-many-to-one-connect/: run1.toml
exp/full-mesh/: trigger.cc
exp/full-mesh/kernel/: worker.cc
exp/full-mesh/user/: worker.cc
exp/motiv-connect/: connect_simulation.cc  ibv_fork.cc  mem_profile.cc  rc_connect_client.cc  rc_connect_client_kernel.cc  rc_connect_server.cc  rc_onesided_client_kernel.cc  ud_msg.hh
exp/one-sided/: krc_client-docker.cc  krc_client.cc  urc_client.cc
exp/race-hasing/: analyser.cc  trigger.cc
exp/race-hasing/krcore/: elastic_worker.cc  elastic_worker_tail_lat.cc
exp/race-hasing/user/: elastic_worker.cc  elastic_worker_tail_lat.cc
exp/rcopy/: client.cc
exp/two-sided/: kernel_twosided_rc_client.cc  kernel_twosided_rc_server.cc  kernel_twosided_rc_zcpy_client.cc  kernel_twosided_rc_zcpy_server.cc  user_payload_latency_rc_client.cc  user_payload_latency_rc_server.cc  user_twosided_rc_client.cc  user_twosided_rc_server.cc
include/: common.h  syscall.h
rust-kernel-rdma/: README.md
rust-kernel-rdma/KRdmaKit/: Cargo.toml
rust-kernel-rdma/KRdmaKit/src/: ctrl.rs  lib.rs  net_util.rs
rust-kernel-rdma/KRdmaKit/unitests/lite_connect/: Cargo.toml
rust-kernel-rdma/KRdmaKit/unitests/lite_connect/src/: lib.rs
rust-kernel-rdma/KRdmaKit/unitests/rc_conn_bug/: Cargo.toml
rust-kernel-rdma/KRdmaKit/unitests/rc_conn_bug/src/: lib.rs  rc_read.rs
rust-kernel-rdma/rust-kernel-linux-util/: Cargo.toml
rust-kernel-rdma/rust-kernel-linux-util/src/: rwlock.rs
rust-kernel-rdma/rust-kernel-rdma-base/: Cargo.toml
rust-kernel-rdma/rust-kernel-rdma-base/src/: allocator.rs
(+545 files in other folders)
