[package]
name = "KRdmaKitSyscall"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
test = false

[features]
#default = ["KRdmaKit"]                     # for kernel control connect test
default = ["KRdmaKit", "virtual_queue"]
#default = ["KRdmaKit", "virtual_queue", "dct_qp"]

# virtual queue cache
virtual_queue = []

# dct
dct_qp = ["meta_cache"]
#dct_qp = ["meta_kv"]        # for meta KV test
#dct_qp = ["meta_kv", "meta_cache"]
#dct_qp = ["migrate_qp"]
#dct_qp = ["meta_kv", "migrate_qp"]


################################################
## MigrateQP from DCQP => RCQP
migrate_qp = []

## Using Meta kv for DC connection
meta_kv = []

meta_cache = []

[dependencies]
KRdmaKit = { path = "../rust-kernel-rdma/KRdmaKit", optional = true, features = ["dct"] }
#KRdmaKit = { path = "../rust-kernel-rdma/KRdmaKit", optional = true, features = ["dct", "profile"] }
no-std-net = { path = "../rust-kernel-rdma/deps/no-std-net" }
hashbrown = "0.9"
nostd_async = "0.3.1"
futures-micro = "0.4"

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
shlex = "0.1"

## lazy static
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
opt-level = 2
